Spacing fixes

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -28,7 +28,7 @@ ul.social {
   margin-top: 85px;
   margin-bottom: @line-height-computed;
   margin-bottom: @line-height-computed * 2.5;
-  padding-bottom: @line-height-computed * 2.5;
+  padding-bottom: 40px;
 
   h4 {
     color: @gray-light;
